--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -21,3 +21,7 @@ services:
             public: false
             tags:
                 - { name: twig.extension }
+
+    app.medcalendar:
+        class: AppBundle\Service\MedCalendar
+        arguments: ["@doctrine"]
