--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "symfony/assetic-bundle": "~2.7",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "knplabs/knp-paginator-bundle": "^2.5",
-        "friendsofsymfony/jsrouting-bundle": "^1.6"
+        "friendsofsymfony/jsrouting-bundle": "^1.6",
+        "phpmailer/phpmailer": "^5.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
