--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,6 +81,10 @@ swiftmailer:
     host:      "%mailer_host%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
+    port:      "%mailer_port%"
+    auth_mode:  "%mailer_auth_mode%"
+    encryption: "%mailer_encryption%"
+    sender_address: "mailer@medalmanah.ru"
     spool:     { type: memory }
 
 fos_user:
