--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,21 +2,23 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host:     127.0.0.1
-    database_port:     ~
-    database_name:     symfony
-    database_user:     root
-    database_password: ~
-    # You should uncomment this if you want use pdo_sqlite
-    # database_path: "%kernel.root_dir%/data.db3"
+    database_host: 127.0.0.1
+    database_port: null
+    database_name: medalmanah
+    database_user: root
+    database_password: 3245897
+    mailer_transport: smtp
+    mailer_host: 127.0.0.1
+    mailer_user: root
+    mailer_password: LzfO4SH5ow
+    mailer_auth_mode: login
+    mailer_encryption: tls
+    mailer_port: 25
+    secret: ThisTokenIsNotSoSecretChangeIt
+    domain: 'https://medalmanah.ru/'
+    locale: ru
 
-    mailer_transport:  smtp
-    mailer_host:       127.0.0.1
-    mailer_user:       ~
-    mailer_password:   ~
-
-    # A secret key that's used to generate certain security-related tokens
-    secret:            ThisTokenIsNotSoSecretChangeIt
-
-    domain: 'http://euat.loc/'
-    locale: 'ru'
+    twitter_consumer_key: ~
+    twitter_consumer_secret: ~
+    twitter_access_token: 	~
+    twitter_access_secret: 	~
