--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "knplabs/knp-paginator-bundle": "^2.5",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
-        "phpmailer/phpmailer": "^5.2"
+        "phpmailer/phpmailer": "^5.2",
+        "endroid/twitter": "^1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
