--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -10,7 +10,7 @@ parameters:
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: root
-    mailer_password: LzfO4SH5ow
+    mailer_password: ~
     mailer_auth_mode: login
     mailer_encryption: tls
     mailer_port: 25
