--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,6 +30,9 @@ framework:
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
         save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
+        cookie_lifetime: 2592000
+        gc_maxlifetime: 3600
+
     fragments:       ~
     http_method_override: true
     assets: ~
