--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "knplabs/knp-paginator-bundle": "^2.5",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
         "phpmailer/phpmailer": "^5.2",
-        "endroid/twitter": "^1.2"
+        "endroid/twitter": "^1.2",
+        "jublonet/codebird-php": "^3.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
