--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -107,6 +107,8 @@ fos_user:
     profile:
         form:
             type: AppBundle\Form\Type\ProfileFormType
+            name: fos_user_profile_form
+            validation_groups:  [Profile, Default]
 
 
 knp_paginator:
