--- a/web/.htaccess
+++ b/web/.htaccess
@@ -20,7 +20,7 @@ ExpiresByType application/x-javascript "access plus 1 week"
 ExpiresByType application/x-font-woff "access plus 1 week"
 
 
-Redirect 301 /manual/ https://medalmanah.ru$
+#Redirect 301 /manual/ https://medalmanah.ru$
 Redirect 301 /manual/* https://medalmanah.ru$
 
 RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
