--- a/web/.htaccess
+++ b/web/.htaccess
@@ -20,8 +20,10 @@ ExpiresByType application/x-javascript "access plus 1 week"
 ExpiresByType application/x-font-woff "access plus 1 week"
 
 
-#Redirect 301 /manual/ https://medalmanah.ru$
-Redirect 301 /manual/(.*) https://medalmanah.ru$
+RewriteCond %{REQUEST_URI} manual\/(.*)
+RewriteRule ^(.*)$ https://medalmanah.ru/ [L,R=301]
+
+Redirect 301 /manual/(.*) https://medalmanah.ru/
 
 RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
 RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
