--- a/web/.htaccess
+++ b/web/.htaccess
@@ -20,10 +20,11 @@ ExpiresByType application/x-javascript "access plus 1 week"
 ExpiresByType application/x-font-woff "access plus 1 week"
 
 
-RewriteCond %{REQUEST_URI} manual\/(.*)
-RewriteRule  https://medalmanah.ru/ [L,R=301]
 
-Redirect 301 /manual/ https://medalmanah.ru/
+Redirect 301 /manual/* https://medalmanah.ru/
+
+RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
 
 # By default, Apache does not evaluate symbolic links if you did not enable this
 # feature in your server configuration. Uncomment the following line if you
